iTana about page

--- a/About_iTana.html
+++ b/About_iTana.html
@@ -283,15 +283,11 @@
                       src="/assets/img/iTana/e90b86e9-fb0e-400b-96ae-4580418a9a86 (1).jpg"
                     />
                     <div class="small text-gray-500 text-center">
-                      Photo Credit: Unsplash
+                      iTanaKenya
                     </div>
                     <div class="single-post-text my-5">
                       <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing
-                        elit. Odit similique distinctio quidem blanditiis
-                        architecto ullam a itaque quisquam nihil! Unde ducimus
-                        deleniti exercitationem minima, molestiae ab saepe
-                        libero. Doloribus, a?
+                        iTana is a swahili 
                       </p>
                       <p>
                         Magnam amet labore exercitationem maxime consectetur
